--- a/src/pages/home/css/comanda.css
+++ b/src/pages/home/css/comanda.css
@@ -36,26 +36,24 @@
             }
         }
 
-        nav {
-            display: flex;
-            justify-content: flex-end;
-
-            button {
-                font-size: .7em;
-                padding: 5px;
-                background-color: orangered;
-                color: white;
-                align-self: flex-end;
-                --back: red;
-                --color: white;
-            }
+        button.add-btn {
+            font-size: .7em;
+            padding: 5px;
+            background-color: orangered;
+            color: white;
+            align-self: flex-end;
+            --back: red;
+            --color: white;
         }
+
 
         .list {
             display: flex;
             flex-direction: column;
             gap: 5px;
             min-height: 120px;
+            overflow-y: auto;
+            max-height: 400px;
 
             h3 {
                 font-size: .9rem;
@@ -82,15 +80,28 @@
             }
         }
 
-        .conclude-btn {
-            padding: 10px;
-            background-color: orangered;
-            color: white;
-            align-self: flex-end;
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             gap: 20px;
-            --back: red;
-            --color: white;
+
+            p {
+                margin-left: 5px;
+                font-weight: 500;
+            }
+
+            .conclude-btn {
+                padding: 10px;
+                background-color: orangered;
+                color: white;
+                align-self: flex-end;
+                gap: 20px;
+                --back: red;
+                --color: white;
+            }
         }
+
     }
 }
 
@@ -156,6 +167,7 @@
                 gap: 5px;
                 height: 100%;
                 overflow: auto;
+                max-height: initial;
 
                 h3 {
                     font-size: .9rem;
