--- a/src/pages/home/css/add-prato.css
+++ b/src/pages/home/css/add-prato.css
@@ -1,12 +1,15 @@
 .modal.add-prato {
     display: flex;
     justify-content: flex-end;
+    pointer-events: none;
 
     .content {
         border-radius: 0px;
         overflow: auto;
         padding: 0px;
         gap: 0px;
+        max-width: 450px;
+        pointer-events: all;
 
         .head {
             position: sticky;
@@ -20,6 +23,23 @@
                 align-items: center;
                 justify-content: space-between;
                 width: 100%;
+                gap: 10px;
+
+                input {
+                    width: 100%;
+                    padding: 5px;
+                    background-color: rgb(255, 100, 100);
+                    color: white;
+                    font-size: .9rem;
+
+                    &::placeholder {
+                        color: white;
+                    }
+
+                    &:focus{
+                        background-color: rgb(210, 39, 0);
+                    }
+                }
 
                 nav {
                     display: flex;
@@ -46,7 +66,6 @@
                 &[open] {
                     opacity: 1;
                     pointer-events: all;
-                    animation: var(--show-top);
                     z-index: initial;
                 }
 
@@ -58,7 +77,7 @@
                     margin-bottom: 10px;
 
                     svg {
-                        font-size: 1rem;
+                        font-size: 1.2rem;
                     }
                 }
 
