--- a/src/pages/home/css/index.css
+++ b/src/pages/home/css/index.css
@@ -64,3 +64,72 @@
         }
     }
 }
+
+@media screen and (max-width: 500px) {
+    .page.home {
+    display: flex;
+    flex-direction: column;
+
+    header {
+        display: flex;
+        justify-content: center;
+        padding: 10px;
+        background-color: rgba(194, 28, 28, 0.853);
+        color: white;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.727);
+        z-index: 1;
+
+        h1 {
+            font-weight: 500;
+            font-size: 1.2rem;
+        }
+    }
+
+    .home-main {
+        display: flex;
+        height: 100%;
+        width: 100%;
+        background-color: aliceblue;
+        overflow: hidden;
+
+        .sidebar {
+            background-color: white;
+            width: 100%;
+            height: 100%;
+            max-width: 50px;
+            display: flex;
+            flex-direction: column;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.239);
+            z-index: 1;
+
+            nav {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+
+                svg {
+                    padding: 15px;
+                    color: rgb(155, 0, 0);
+
+                    &:hover {
+                        background-color: rgb(233, 182, 30);
+                        color: rgb(255, 255, 255);
+                    }
+                }
+            }
+        }
+
+        .component-contain {
+            height: 100%;
+            width: 100%;
+
+            .component {
+                display: flex;
+                flex-direction: column;
+                height: 100%;
+                padding: 20px;
+            }
+        }
+    }
+}
+}
