--- a/src/pages/home/css/index.css
+++ b/src/pages/home/css/index.css
@@ -67,69 +67,72 @@
 
 @media screen and (max-width: 500px) {
     .page.home {
-    display: flex;
-    flex-direction: column;
-
-    header {
         display: flex;
-        justify-content: center;
-        padding: 10px;
-        background-color: rgba(194, 28, 28, 0.853);
-        color: white;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.727);
-        z-index: 1;
+        flex-direction: column;
 
-        h1 {
-            font-weight: 500;
-            font-size: 1.2rem;
-        }
-    }
-
-    .home-main {
-        display: flex;
-        height: 100%;
-        width: 100%;
-        background-color: aliceblue;
-        overflow: hidden;
-
-        .sidebar {
-            background-color: white;
-            width: 100%;
-            height: 100%;
-            max-width: 50px;
+        header {
             display: flex;
-            flex-direction: column;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.239);
+            justify-content: center;
+            padding: 10px;
+            background-color: rgba(194, 28, 28, 0.853);
+            color: white;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.727);
             z-index: 1;
 
-            nav {
+            h1 {
+                font-weight: 500;
+                font-size: 1.2rem;
+            }
+        }
+
+        .home-main {
+            display: flex;
+            flex-direction: column-reverse;
+            height: 100%;
+            width: 100%;
+            background-color: aliceblue;
+            overflow: hidden;
+
+            .sidebar {
+                background-color: white;
+                width: 100%;
+                height: fit-content;
+                max-width: none;
                 display: flex;
                 flex-direction: column;
-                gap: 10px;
+                box-shadow: 0 0 5px rgba(0, 0, 0, 0.239);
+                z-index: 1;
 
-                svg {
-                    padding: 15px;
-                    color: rgb(155, 0, 0);
+                nav {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-evenly;
+                    width: 100%;
+                    gap: 10px;
 
-                    &:hover {
-                        background-color: rgb(233, 182, 30);
-                        color: rgb(255, 255, 255);
+                    svg {
+                        padding: 15px;
+                        color: rgb(155, 0, 0);
+
+                        &:hover {
+                            background-color: rgb(233, 182, 30);
+                            color: rgb(255, 255, 255);
+                        }
                     }
                 }
             }
-        }
 
-        .component-contain {
-            height: 100%;
-            width: 100%;
-
-            .component {
-                display: flex;
-                flex-direction: column;
+            .component-contain {
                 height: 100%;
-                padding: 20px;
+                width: 100%;
+                overflow-y: auto;
+
+                .component {
+                    display: flex;
+                    flex-direction: column;
+                    padding: 20px;
+                }
             }
         }
     }
-}
 }
