--- a/src/index.css
+++ b/src/index.css
@@ -239,8 +239,8 @@ input[type=date]::-webkit-calendar-picker-indicator {
   .page {
     width: 100dvw;
     height: 100dvh;
-    min-width: 100vw !important;
-    min-height: 100vh !important;
+    min-width: 100dvw !important;
+    min-height: 100dvh !important;
     overflow-x: hidden !important;
   }
 }
